# cmake-demo

./: .gitignore  CMakeLists.txt  README.md
include/: app.h
libs/lib1/: CMakeLists.txt
libs/lib1/include/lib1/: lib1.h
libs/lib1/src/: lib1.c
libs/lib2/: CMakeLists.txt
libs/lib2/include/lib2/: lib2.h
libs/lib2/src/: lib2.c
src/: app.c  main.c
